logo in fixed position on mobile, z-index added

--- a/style.css
+++ b/style.css
@@ -335,14 +335,14 @@ h1 {
         height:85px;
         text-align:center;
         margin-bottom:15px;
-
+        position:fixed;
+        z-index: 1030;
     }
     
     .logo a {
         width:85px;
         height:85px;
         background-size: 80px 80px;
-        position:fixed;
 
     }
 
